--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="description" content="Secure, private, and interactive family tree builder with encryption and photo support." />
+    <title>Family Tree</title>
   </head>
   <body>
     <div id="root"></div>
